Fix tooltips rendering white space outside of table

--- a/timo_frontend/app/styles/app.scss
+++ b/timo_frontend/app/styles/app.scss
@@ -230,7 +230,6 @@ $error-padding: ($input-error-height - $input-error-line-height) / 2 !default;
 
 .event-tooltip {
   max-width: max-content;
-  z-index: 1000;
 }
 
 $select-row-color: white;
